refactor to inner loop